tests/toylang/neg/001282_mutation.toylang
program a = { then if a then sleep; } .
